made changes in ui

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dnmqfgexi/image/upload/v1756924084/p2m-logo_cqbkrh_c0ni94.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="P2M Solutions - Innovating Software, Empowering Businesses. Custom software development, AI/ML integration, and cloud solutions." />
     <meta name="keywords" content="software development, AI integration, cloud solutions, automation, web development, mobile apps, machine learning, DevOps" />
