Fix:changed all logo and added favicons for different size

--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dnmqfgexi/image/upload/v1756924084/p2m-logo_cqbkrh_c0ni94.png" />
+
+    <!-- Favicon for modern browsers -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://res.cloudinary.com/dnmqfgexi/image/upload/v1757271735/Logo_3_jtnmsq.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://res.cloudinary.com/dnmqfgexi/image/upload/v1757271735/Logo_3_jtnmsq.png"
+    />
+
+    <!-- Safari / Apple devices -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://res.cloudinary.com/dnmqfgexi/image/upload/v1757271735/Logo_3_jtnmsq.png"
+    />
+
+    <!-- For Android Chrome -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="https://res.cloudinary.com/dnmqfgexi/image/upload/v1757271735/Logo_3_jtnmsq.png"
+    />
+
+    <!-- Manifest (for PWA support, optional) -->
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Windows (optional) -->
+    <meta
+      name="msapplication-TileImage"
+      content="https://res.cloudinary.com/dnmqfgexi/image/upload/v1757271735/Logo_3_jtnmsq.png"
+    />
+    <meta name="msapplication-TileColor" content="#00d4ff" />
+
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="P2M Solutions - Innovating Software, Empowering Businesses. Custom software development, AI/ML integration, and cloud solutions." />
-    <meta name="keywords" content="software development, AI integration, cloud solutions, automation, web development, mobile apps, machine learning, DevOps" />
+    <meta
+      name="description"
+      content="P2M Solutions - Innovating Software, Empowering Businesses. Custom software development, AI/ML integration, and cloud solutions."
+    />
+    <meta
+      name="keywords"
+      content="software development, AI integration, cloud solutions, automation, web development, mobile apps, machine learning, DevOps"
+    />
     <meta name="theme-color" content="#00d4ff" />
     <title>P2M Solutions - Innovating Software, Empowering Businesses</title>
   </head>
